--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ packages = [
     { include = "taskblocks", from = "src" },
 ]
 classifiers = [
-    "Development Status :: 1 - Prototype",
+    "Development Status :: 1 - Planning",
 ]
 
 [tool.poetry.urls]
@@ -22,6 +22,7 @@ Changelog = "https://github.com/fongant/python-taskblocks/releases"
 python = "^3.10"
 click = "^8.0.3"
 baseobjects = "^1.9.0"
+numpy = "^1.24.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
