--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "taskblocks"
-version = "0.1.1"
+version = "0.1.2"
 description = "An API for creating TaskBlock objects which can switch between async and multiprocessing."
 authors = ["Anthony Fong <FongAnthonyM@gmail.com>"]
 license = "MIT"
@@ -19,7 +19,7 @@ classifiers = [
 Changelog = "https://github.com/fongant/python-taskblocks/releases"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10"
 click = "^8.0.3"
 baseobjects = "^1.9.0"
 numpy = "^1.24.3"
